# prefect_rj_iplanrio

./: .coderabbit.yaml  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.MD  Dockerfile  Dockerfile.smfp  README.md  dbt.md  eai_gateway_incidents_historico.csv  eai_gateway_response_times_historico.csv  exemplo_sla_betterstack.json  extract_sla.py  extrair_historico_betterstack.py  flake.nix  migration.md  openssl.cnf  prefect.yaml  prefect_load_test.yaml  pyproject.toml  runner.Dockerfile  test_backfill_sample.csv
pipelines/rj_cor__meteorologia_inmet/: Dockerfile  __init__.py  flow.py  prefect.yaml  pyproject.toml  tasks.py  utils.py
pipelines/rj_cor__meteorologia_redemet/: Dockerfile  README.md  __init__.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_cor__precipitacao_alertario/: Dockerfile  __init__.py  flow.py  prefect.yaml  pyproject.toml  tasks.py  utils.py
pipelines/rj_cor__precipitacao_cemaden/: Dockerfile  __init__.py  flow.py  prefect.yaml  pyproject.toml  tasks.py  utils.py
pipelines/rj_crm__api_wetalkie/: Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_crm__api_wetalkie/utils/: api_handler.py  tasks.py
pipelines/rj_crm__geolocalizacao_residencia/: Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_crm__geolocalizacao_residencia/utils/: __init__.py  async_utils.py  geo_utils.py
pipelines/rj_crm__get_history_data/: Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_crm__get_history_data/utils/: bigquery.py  sfmc.py
pipelines/rj_crm__salesforce_agentforce_api/: .env.local.example  Dockerfile  constants.py  flow.py  prefect.yaml  prompt.txt  pyproject.toml  tasks.py
pipelines/rj_crm__salesforce_agentforce_api/config/: settings.yaml
pipelines/rj_crm__salesforce_agentforce_api/flows/: fase1_stdm.py  full_daily.py  template.py
pipelines/rj_crm__salesforce_agentforce_api/sql/: create_tables.sql
pipelines/rj_crm__salesforce_agentforce_api/tasks/: auth.py  checkpoint.py  extract_bulk_api.py  extract_chunked.py  extract_data_cloud.py  load_bigquery.py  notify.py  preflight.py  transform.py  validate.py
pipelines/rj_crm__salesforce_api/: Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_crm__webhook_wetalkie_template_status_update/: Dockerfile  flow.py  prefect.yaml  pyproject.toml
pipelines/rj_crm__wetalkie_api_hsm_info/: Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_crm__wetalkie_api_hsm_info/utils/: tasks.py
pipelines/rj_crm__wetalkie_atualiza_contato/: Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_crm__wetalkie_atualiza_contato/utils/: api_handler.py  tasks.py
pipelines/rj_iplanrio__1746_seconverva_salesforce_poc/: Dockerfile  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_iplanrio__alertario_previsao_24h/: Dockerfile  MIGRACAO_INSTRUÇÕES.md  alerting.py  constants.py  flow.py  prefect.yaml  pyproject.toml  sample_data.xml  tasks.py  test_local.py  test_new.py  test_simple.py
pipelines/rj_iplanrio__alertario_previsao_24h/tests/: test_alerting.py
pipelines/rj_iplanrio__alertario_previsao_24h/utils/: tasks.py
pipelines/rj_iplanrio__betterstack_api/: Dockerfile  README.md  constants.py  flow.py  prefect.yaml  pyproject.toml  schema_incidents.json  schema_response_times.json  tasks.py
pipelines/rj_iplanrio__betterstack_api/utils/: tasks.py
pipelines/rj_iplanrio__cor_alerts_aggregator/: Dockerfile  __init__.py  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_iplanrio__cor_alerts_aggregator/utils/: __init__.py  cor_api.py
pipelines/rj_iplanrio__dados_mestres/: Dockerfile  flow.py  prefect.yaml  pyproject.toml  schedules.py
pipelines/rj_iplanrio__eai_history/: Dockerfile  FIX_SUMMARY.md  bq_payload.json  db.py  env.py  flow.py  history.py  md_to_wpp.py  message_formatter.py  prefect.yaml  pyproject.toml  tasks.py
pipelines/rj_iplanrio__nf_agent/: Dockerfile  TROUBLESHOOTING.md  flow.py  prefect.yaml  pyproject.toml
pipelines/rj_iplanrio__taxirio/: Dockerfile  MIGRATION.md  README.md  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py  utils.py
pipelines/rj_iplanrio__taxirio/cities/: mongodb.py
pipelines/rj_iplanrio__taxirio/discounts/: mongodb.py
pipelines/rj_iplanrio__taxirio/drivers/: mongodb.py
pipelines/rj_iplanrio__taxirio/metricsdriverunoccupieds/: mongodb.py
pipelines/rj_iplanrio__taxirio/passengers/: mongodb.py
pipelines/rj_iplanrio__taxirio/paymentmethods/: mongodb.py
pipelines/rj_iplanrio__taxirio/races/: mongodb.py
pipelines/rj_iplanrio__taxirio/rankingraces/: mongodb.py
pipelines/rj_iplanrio__taxirio/users/: mongodb.py
pipelines/rj_seconserva__infraestrutura_siscor_obras/: Dockerfile  README.md  __init__.py  constants.py  flow.py  prefect.yaml  pyproject.toml
pipelines/rj_smas__disparo_cadunico/: Dockerfile  MIGRATION_NOTES.md  constants.py  flow.py  prefect.yaml  processors.py  pyproject.toml  schemas.py  tasks.py  validators.py
pipelines/rj_smas__disparo_cadunico/utils/: api_handler.py  tasks.py
pipelines/rj_smas__disparo_pic/: Dockerfile  __init__.py  build_prefect_yaml.py  constants.py  create_fake_event_approval_table.sql  create_fake_event_table.sql  flow.py  hello.py  prefect.yaml  processors.py  pyproject.toml  scheduler.yaml  schemas.py  tasks.py  validators.py
pipelines/rj_smas__disparo_pic/config/: example_transform.yaml
pipelines/rj_smas__disparo_pic/core/: api_handler.py  base.py  pipeline.py  registry.py  transforms.py
pipelines/rj_smas__disparo_pic/flows/: whatsapp_flow.py
pipelines/rj_smas__disparo_pic/tasks/: __init__.py  dispatch.py  extract.py  prepare.py  record.py  transform.py  validate.py
pipelines/rj_sms__sisreg_disparo_lembretes/: Dockerfile  constants.py  flow.py  prefect.yaml  pyproject.toml  tasks.py
templates/rj_{{ cookiecutter.secretaria }}__{{ cookiecutter.pipeline }}/: Dockerfile  flow.py  prefect.yaml  pyproject.toml
(+885 files in other folders)
