[project]
name = "pipelines_v3"
version = "0.1.0"
description = "Prefect pipelines for the Rio de Janeiro Department of Transportation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery==1.10.1",
    "idna>=3.10",
    "infisicalsdk>=1.0.12",
    "iplanrio",
    "pandas>=2.2.3",
    "pendulum>=3.1.0",
    "pre-commit>=4.4.0",
    "prefect==3.4.9",
    "pydantic>=2.0,<3.0",
    "redis-pal>=1.0.0",
    "unidecode>=1.3.8",
]

[tool.uv.sources]
iplanrio = { git = "https://github.com/prefeitura-rio/iplanrio.git" }

[tool.uv.workspace]
members = ["pipelines/*"]
exclude = ["pipelines/__pycache__"]

[dependency-groups]
dev = ["prefect-docker>=0.6.5"]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
exclude = ["templates"]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "PT",
  "PTH",
  "RUF",
  "W",
]

[tool.ruff.format]
quote-style = "double"
