[project]
name = "prefect_rj_iplanrio"
version = "0.1.0"
description = "Prefect pipelines for the Rio de Janeiro City Hall."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "idna>=3.10",
  "iplanrio",
  "pandas>=2.2.3",
  "prefect==3.4.9",
  "unidecode>=1.3.8",
]

[tool.uv.sources]
iplanrio = { git = "https://github.com/prefeitura-rio/iplanrio.git" }

[tool.uv.workspace]
members = ["pipelines/*"]

[tool.uv]
override-dependencies = [
  "cx-oracle ; python_version < '3.13'",
  "oracledb>=2.0.0 ; python_version >= '3.13'",
]

[dependency-groups]
dev = ["prefect-docker>=0.6.5"]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "PT",
  "PTH",
  "RUF",
  "W",
]

[tool.ruff.format]
quote-style = "double"
