[project]
name = "rj_cor__meteorologia_redemet"
version = "0.1.0"
description = "Pipeline para coleta de dados meteorológicos do REDEMET - COR"
dependencies = [
    "prefect>=3.0.0",
    "pandas>=2.0.0",
    "pendulum>=3.0.0",
    "requests>=2.31.0",
    "unidecode>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines/rj_cor__meteorologia_redemet"]
