[project]
name = "rj_cor__precipitacao_alertario"
version = "0.1.0"
description = "Pipeline para coleta de dados de precipitação e meteorologia do AlertaRio - COR"
dependencies = [
    "prefect>=3.0.0",
    "pandas>=2.0.0",
    "pendulum>=3.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[tool.uv.sources]
prefect_rj_iplanrio = { workspace = true }
