[project]
name = "rj_cor__precipitacao_cemaden"
version = "0.1.0"
description = "Pipeline para coleta de dados de precipitação do CEMADEN - COR"
dependencies = [
    "prefect>=3.0.0",
    "pandas>=2.0.0",
    "pendulum>=3.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines/rj_cor__precipitacao_cemaden"]
