[project]
name = "rj_crm__geolocalizacao_residencia"
version = "0.1.0"
description = "Pipeline CRM para geolocalização de endereços residenciais com múltiplas estratégias"
dependencies = [
    # Core Prefect
    "prefect==3.4.9",
    "prefect-docker>=0.6.5",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Google Cloud dependencies
    "google-cloud-bigquery>=3.4.0",
    "google-cloud-storage==2.10.0",
    "basedosdados>=2.0.0",
    
    # Geocoding libraries
    "geopy>=2.3.0",
    "openlocationcode>=1.0.1",
    "unidecode>=1.3.0",
    
    # HTTP and async
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    
    # Time and data utilities
    "pendulum==3.0.0",
    "pytz>=2025.2",
    
    # iplanrio utilities
    "prefeitura-rio[actions] @ git+https://github.com/prefeitura-rio/prefeitura-rio@54593ddff444158b0ecbab5514c5cde4d44012c0",
    
    # Configuration and environment
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]