[project]
name = "rj_crm__get_history_data"
version = "0.1.0"
description = "Pipeline CRM para extração de Data Extensions históricas do Salesforce Marketing Cloud"
dependencies = [
    "prefect_rj_iplanrio",
    "prefect==3.4.9",
    "prefect-docker>=0.6.5",
    "requests>=2.31.0",
    "python-dotenv==1.0.1",
    "prefeitura-rio[actions] @ git+https://github.com/prefeitura-rio/prefeitura-rio@54593ddff444158b0ecbab5514c5cde4d44012c0",
]

[tool.uv.sources]
prefect_rj_iplanrio = { workspace = true }
