[project]
name = "rj_crm__webhook_wetalkie_template_status_update"
version = "0.1.0"
description = "..."
dependencies = [
    "prefect_rj_iplanrio",
    "defusedxml>=0.7.1",
    "google-cloud-bigquery>=3.25.0",
    "basedosdados>=2.0.0b23",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "prefect-docker>=0.6.5",
]

[tool.uv.sources]
prefect_rj_iplanrio = { workspace = true }
