[project]
name = "rj_iplanrio__betterstack_api"
version = "0.1.0"
description = "Pipeline para extração de dados da BetterStack API"
requires-python = ">=3.13,<3.14"
dependencies = [
    "prefect_rj_iplanrio",
    "prefect==3.4.9",
    "prefect-docker>=0.6.5",
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "prefeitura-rio[actions] @ git+https://github.com/prefeitura-rio/prefeitura-rio@54593ddff444158b0ecbab5514c5cde4d44012c0",
]

[tool.uv.sources]
prefect_rj_iplanrio = { workspace = true }
