[project]
name = "rj_iplanrio__cor_alerts_aggregator"
version = "0.1.0"
description = "Pipeline para agregacao e envio de alertas COR"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "google-cloud-bigquery>=3.0.0",
    "basedosdados>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
