[project]
name = "rj_iplanrio__cor_alerts_aggregator"
version = "0.1.0"
description = "Pipeline para agregacao e envio de alertas COR"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "google-cloud-bigquery>=3.25.0",
    "basedosdados==2.0.3",
    "gspread>=6.0.0",
    "prefect==3.4.9",
    "prefect-docker>=0.6.5",
]
